Man pages cleanup.
VPS -> VE, removed CVS $Id$'s, updated dates, some other minor fixes.

--- a/man/arpsend.8
+++ b/man/arpsend.8
@@ -1,5 +1,4 @@
-.\" $Id: arpsend.8,v 1.4.12.8 2005/10/17 11:42:41 igor Exp $
-.TH arpsend 8 "10 Aug 2005" "OpenVZ" "Virtual Private Server"
+.TH arpsend 8 "12 Sep 2006" "OpenVZ" "Virtual Environments"
 .SH NAME
 arpsend \- utility to send ARP requests.
 .\" to detect or update neighbours ARP cashes with given IP.
