--- a/man/vzcpucheck.8
+++ b/man/vzcpucheck.8
@@ -1,5 +1,4 @@
-.\" $Id: vzcpucheck.8,v 1.4.10.4 2005/10/17 11:42:42 igor Exp $
-.TH vzcpucheck 8 "10 Aug 2005" "OpenVZ" "Virtual Private Server"
+.TH vzcpucheck 8 "12 Sep 2006" "OpenVZ" "Virtual Environments"
 .SH NAME
 vzcpucheck \- shows information about the CPU power and utilization.
 .SH SYNOPSIS
@@ -8,7 +7,7 @@ vzcpucheck [\fI-v\fR]
 This script outputs information on the CPU power and utilization.
 .SH OPTIONS
 .IP \fB-v\fR 
-Display information for each VPS.
+Display information for each VE.
 .SH RETURN CODE
 Returns 0 upon success.
 .SH SEE ALSO
