--- a/man/vzmemcheck.8
+++ b/man/vzmemcheck.8
@@ -1,12 +1,11 @@
-.\" $Id: vzmemcheck.8,v 1.1.12.5 2005/09/26 14:58:18 igor Exp $
-.TH vzmemcheck 8 "10 Aug 2005" "OpenVZ" "Virtual Private Server"
+.TH vzmemcheck 8 "12 Sep 2006" "OpenVZ" "Virtual Environments"
 .SH NAME
 vzmemcheck \- utility to display information of node memory parameters.
 .SH SYNOPSIS
 vzmemcheck [\fB-v\fR] [\fB-A\fR]
 .SH OPTIONS
 .IP \fB-v\fR 4
-Display information for each VPS.
+Display information for each VE.
 .IP \fB-A\fR 4
 Display absolute values (in megabytes). 
 .SH DESCRIPTION
