--- a/man/vzpid.8
+++ b/man/vzpid.8
@@ -1,14 +1,13 @@
-.\" $Id: vzpid.8,v 1.4.10.4 2005/10/17 11:42:42 igor Exp $
-.TH vzpid 8 "10 Aug 2005" "OpenVZ" "Virtual Private Server"
+.TH vzpid 8 "12 Sep 2006" "OpenVZ" "Virtual Environments"
 .SH NAME
-vzpid \- display the VPS id given the process id (pid).
+vzpid \- display the VE ID given the process ID (PID).
 .SH SYNOPSIS
 vzpid [\fB-h\fR] [\fIpid\fR [...]]
 .SH DESCRIPTION
-This script displays the VPS id the process with the given \fIid\fR belongs to.
+This script displays the VE ID the process with the given \fIpid\fR belongs to.
 .SH OPTIONS
 .IP \fIpid\fR
-The \fIpid\fR of the process to display the VPS id of.
+The \fIpid\fR of the process to display the VE ID of.
 .SH RETURN CODE
 Returns 0 upon a successful execution.
 .SH SEE ALSO
