--- a/man/vzsplit.8
+++ b/man/vzsplit.8
@@ -1,18 +1,26 @@
-.\" $Id: vzsplit.8,v 1.3.10.6 2005/10/17 11:42:42 igor Exp $
-.TH vzsplit 8 "20 Aug 2002" "OpenVZ" "Virtual Private Servers"
+.TH vzsplit 8 "12 Sep 2006" "OpenVZ" "Virtual Environments"
 .SH NAME
-vzsplit \- generate a sample VPS configuration file with a certain set of system resource control parameters.
+vzsplit \- generate a sample VE configuration file with a certain set of system resource control parameters.
 .SH SYNOPSIS
 vzsplit [\fB-n\fR \fInumve\fR] [\fB-f\fR \fIconf_name\fR] [\fB-s\fR \fIswapsize\fR]
 .SH DESCRIPTION
-The \fBvzsplit\fR utility is used to split the Hardware Node into equal parts. It generates a full set of system resource control parameters for the given number of Virtual Private Servers. The values are calculated from the total physical memory of the Hardware Node the utility runs on and the number of Virtual Private Servers the Hardware Node shall be able to run even if the given number of Virtual Private Servers consume all resources available.
-Without any option \fBvzsplit\fR prompts for the desired number of Virtual Private Servers and outputs the resulting resource control parameters to the screen.
-If there is not enough system resources to run the specified number of
-VPSs, an appropriate message is shown and the sample configuration file is not generated.
+The \fBvzsplit\fR utility is used to split the Hardware Node into equal parts.
+It generates a full set of system resource control parameters for the
+given number of Virtual Environments. The values are calculated from
+the total physical memory of the Hardware Node the utility runs on, and
+the number of Virtual Environments the Hardware Node shall be able
+to run even if the given number of Virtual Environments consume all
+the resources available.
+Without any option given, \fBvzsplit\fR prompts for the desired number
+of Virtual Environments and outputs the resulting resource control
+parameters to stdout.
+If there are not enough system resources to run the specified number of
+VEs, an appropriate message is shown and the sample configuration file
+is not generated.
 .SH OPTIONS
 .TP
 \fB-n\fR \fInumve\fR
-Specify the number of VPSs.
+Specify the number of VEs.
 .TP
 \fB-f\fR \fIconf_name\fR
 Specify the configuration file name. The program output is placed to
