Global VPS -> VE renaming madness.
Hope I haven't b0rked everything.

--- a/man/vzctl.8
+++ b/man/vzctl.8
@@ -428,7 +428,7 @@ Stops and unmounts a VE.
 Restarts a VE, i.e. stops it if it is running, and starts again.
 .IP \fBstatus\fR 4
 Shows a VE status. Basically this is a line with five words separated by spaces.
-First word is literally \fBVPSID\fR. Second word is the numeric \fIVE ID\fR.
+First word is literally \fBVEID\fR. Second word is the numeric \fIVE ID\fR.
 Third word is showing whether this VE exists or not,
 it can be either \fBexist\fR or \fBdeleted\fR.
 Fourth word is showing the status of the VE filesystem,
