--- a/ChangeLog
+++ b/ChangeLog
@@ -26,6 +26,7 @@
 	* added 'make install-gentoo' and Gentoo init.d/vz script (bug #262)
 	* fixed arpsend options parsing for some compilers (bug #261)
 	* man pages cleanup (VPS->VE, etc.)
+	* changed all utilities and man pages to refer to VE not VPS
 
    3.0.11: Mon Aug  7 2006 <igor@openvz.ru>
 	* fixed using VE_ROUTE_SRC_DEV variable
