--- a/ChangeLog
+++ b/ChangeLog
@@ -1,4 +1,5 @@
    3.0.12: FIXME
+   	* fixed annoying arp warning (bug #189)
 	* added bash completion script (bug #212)
 	* added check to vzmigrate if OpenVZ is run on another side (bug #163)
 	* removed debian directory from the tarball (bugs #197, #194)
