--- a/man/vzctl.8
+++ b/man/vzctl.8
@@ -379,6 +379,10 @@ Read VE parameters from the VE sample configuration file
 apply them, if --save option specified save to the VE config file.
 The following parameters are not changed: \fBHOSTNAME\fR, \fBIP_ADDRESS\fR,
 \fBOSTEMPLATE\fR, \fBVE_ROOT\fR, and \fBVE_PRIVATE\fR.
+.TP
+\fB--applyconfig_map\fR \fIname\fR
+Apply VE config parameters selected by \fIname\fR group, now only \fIname\fR argument
+supported. Restore VE name based on NAME variable in VE configuration file.
 .SS Checkpointing and restore
 .TP
 Checkpointing is a feature of OpenVZ kernel which allows to save a complete
