--- a/man/vzmigrate.8
+++ b/man/vzmigrate.8
@@ -27,7 +27,7 @@ Whether to remove a VE area on source HN for the successfully migrated VE.
 .TP
 \fB--ssh=\fIoptions\fR
 Additional \fIoptions\fR that will be passed to ssh while establishing
-connection to destination HN. You may add options like \fB-c blowfish\rR
+connection to destination HN. You may add options like \fB-c blowfish\fR
 or the like.
 
 .TP
