man vzctl: change vpsid to veid
Patch from
http://bugzilla.openvz.org/show_bug.cgi?id=263

--- a/man/vzlist.8
+++ b/man/vzlist.8
@@ -51,7 +51,7 @@ _
 .P
 For example:
 .br
-\f(CW	vzlist -o vpsid,kmemsize,kmemsize.l -s kmemsize\fR
+\f(CW	vzlist -o veid,kmemsize,kmemsize.l -s kmemsize\fR
 .TS
 allbox center;
 lB lB
