Minor error in manpage for vzctl and vps.conf vz (5) -> vz.conf (5)
Signed-off-by: Kristian Høgh <kfh@segtel.dk>

--- a/man/vps.conf.5
+++ b/man/vps.conf.5
@@ -108,6 +108,6 @@ Corresponds to the \fB--searchdomain\fR option. Several search domains
 are divided by spaces.
 .SH SEE ALSO
 .BR vzctl (8),
-.BR vz (5).
+.BR vz.conf (5).
 .SH LICENSE
 Copyright (C) 2001-2006 by SWsoft. Licensed under GNU GPL.
