--- a/man/vzctl.8
+++ b/man/vzctl.8
@@ -531,7 +531,7 @@ To permanently remove this VE:
 .br
 /proc/fairsched\fR
 .SH SEE ALSO
-.BR vz (5),
+.BR vz.conf (5),
 .BR vps.conf (5),
 .BR vzquota (8),
 .SH LICENSE
