Split verbose from LOG_LEVEL * Split --verbose from LOG_LEVEL * Add optional argument to --verbose 	--verbose 	--verbose level 	--verbose=level * Add VERBOSE to vz.conf

--- a/man/vz.conf.5
+++ b/man/vz.conf.5
@@ -29,7 +29,9 @@ Enables or disables logging. This parameter can be set to \fByes\fR or
 Set location of log file, default is \f(CR/var/log/vzctl.log\fR.
 .IP "\fBLOG_LEVEL\fR=\fInumber\fR"
 Set the logging level. The more \fInumber\fR is, the more information will be
-displayed.
+logged.
+.IP "\fBVERBOSE\fR=\fInumber\fR"
+Set the output verbosity. Default is 0.
 .SS Disk quota parameters
 .IP \fBDISK_QUOTA\fR=\fByes\fR|\fBno\fR
 In case the value of this parameter is set to \fBno\fR, all disk
