Implement MODULES_DISABLED in gentoo initscript; document it.
This is an addition to commit 37861579f02fee2f6a8aea48282586b0a45d94bc

In case MODULES_DISABLED is set to "yes" in global config,
no attempt is made to load/unload OpenVZ kernel modules
in vz initscripts.

http://bugzilla.openvz.org/132

--- a/man/vz.conf.5
+++ b/man/vz.conf.5
@@ -32,6 +32,11 @@ Set the logging level. The more \fInumber\fR is, the more information will be
 logged.
 .IP "\fBVERBOSE\fR=\fInumber\fR"
 Set the output verbosity. Default is 0.
+.IP "\fBMODULES_DISABLED\fR=\fByes\fR|\fBno\fR
+If the value of this parameter is set to \fByes\fR, no attempt to load
+OpenVZ kernel modules is made in vz initscript. This is helpful on systems
+which have OpenVZ-specific stuff compiled into the kernel (i. e. not
+as modules).
 .SS Disk quota parameters
 .IP \fBDISK_QUOTA\fR=\fByes\fR|\fBno\fR
 In case the value of this parameter is set to \fBno\fR, all disk
