vzctl.8: formatting/spelling fix
An addition to commit 0855ff4d69c61e4a13f1b605f30e4e4f5a012ea0

--- a/man/vzctl.8
+++ b/man/vzctl.8
@@ -111,11 +111,9 @@ The following options can be used to reconfigure the already-created virtual
 ethernet interface. To select the interface to configure, use
 \fB--ifname\fR \fIname\fR option.
 
-\fB--mac\fR \fIXX:XX:XX:XX:XX:XX\fR - MAC address of interface inside VE,
-
-\fB--host_ifname\fR \finame\fR - interface name for virtual interface in VE0
-
-\fB--host_mac\fR \fIXX:XX:XX:XX:XX:XX\fR - MAC address of interface iin VE0
+ \fB--mac\fR \fIXX:XX:XX:XX:XX:XX\fR - MAC address of interface inside VE.
+ \fB--host_ifname\fR \fIname\fR - interface name for virtual interface in VE0.
+ \fB--host_mac\fR \fIXX:XX:XX:XX:XX:XX\fR - MAC address of interface in VE0.
 .TP
 \fB--netif_del\fR \fIdev_name\fR|\fBall\fR
 Removes virtual ethernet device from VE. If you want to remove all devices,
