--- a/man/vzctl.8
+++ b/man/vzctl.8
@@ -379,8 +379,11 @@ You can use the following values for \fIcapname\fR:
 \fBDevice access management\fR
 .TP
 \fB--devnodes\fR \fIdevice\fR:\fBr|w|rw|none\fR
-Give access (\fBr\fR - read, \fBw\fR - write, \fBrw\fR - read write, \fBnone\fR - no access) to special file /dev/\fIdevice\fR from a VE.
+Give the VE an access (\fBr\fR - read, \fBw\fR - write, \fBrw\fR - read write, \fBnone\fR - no access) to a device designated by the special file /dev/\fIdevice\fR. Device file is created in VE by vzctl.
 .TP
+\fB--devices\fR \fBb|c\fR:\fImajor\fR:\fIminor\fR|\fBall\fR:[\fBr\fR|\fBw\fR|\fBrw\fR|\fBnone\fR]
+Give the VE an access to a \fBb\fRlock or \fBc\fRharacter device
+designated by its \fImajor\fR and \fIminor\fR numbers. Device file have to be created manually.
 .TP
 \fBFeatures management\fR
 .TP
