--- a/man/vzctl.8
+++ b/man/vzctl.8
@@ -402,6 +402,13 @@ The following parameters are not changed: \fBHOSTNAME\fR, \fBIP_ADDRESS\fR,
 \fB--applyconfig_map\fR \fIname\fR
 Apply VE config parameters selected by \fIname\fR group, now only \fIname\fR argument
 supported. Restore VE name based on NAME variable in VE configuration file.
+.TP
+\fBI/O priority management\fR
+.TP
+\fB--ioprio\fR \fIpriority\fR
+Assigns I/O priority to VE. \fIPriority\fR range is \fB0-7\fR.
+The greater \fIpriority\fR is, the more time for I/O activity VE has.
+By default each VE has \fIpriority\fR of \fB4\fR.
 .SS Checkpointing and restore
 .TP
 Checkpointing is a feature of OpenVZ kernel which allows to save a complete
