vzctl(8) man page: add info about --setmode
option --setmode is missing in man page of vzctl.

[kir@openvz.org: fixed wording a bit]
http://bugzilla.openvz.org/499

--- a/man/vzctl.8
+++ b/man/vzctl.8
@@ -71,6 +71,10 @@ with \fB-force\fR option.
 Add a name for a VE. The \fIname\fR can later be used in subsequent calls to
 \fBvzctl\fR in place of \fIveid\fR.
 .TP
+\fB--setmode\fR \fIrestart\fR|\fIignore\fR
+Whether to restart a VE after applying any parameters requiring that
+the VE be restarted for those to take effect.
+.TP
 \fBNetwork related parameters\fR
 .TP
 \fB--ipadd\fR \fIaddr\fR
