vzctl: set meminfo to privvmpages:1 by default
Make /proc/meminfo inside a VE virtualized by default,
as suggested by http://bugzilla.openvz.org/489

--- a/man/vzctl.8
+++ b/man/vzctl.8
@@ -310,7 +310,9 @@ You can use the following modes for \fImode\fR:
 \fBpages\fR:\fIvalue\fR - sets total memory in pages
 .br
 \fBprivvmpages\fR:\fIvalue\fR - sets total memory as
-\fBprivvmpages\fR * \fIvalue\fR 
+\fBprivvmpages\fR * \fIvalue\fR
+
+Default is \fBprivvmpages:1\fR.
 .TP
 \fBIptables control parameters\fR
 .TP
