--- a/man/vzctl.8
+++ b/man/vzctl.8
@@ -153,7 +153,7 @@ Available suffixes are:
 other architectures may differ).
 
 You can also specify the literal word \fBunlimited\fR in place of a number.
-In that case the corresponding value would be set to LONG_MAX, i. e.
+In that case the corresponding value will be set to \fBLONG_MAX\fB, i. e.
 the maximum possible value.
 
 .TP
