man/vzctl.8: minor formatting fixes
Possible values for --iptables should be formatted with bold not italic.
Also ass a missing comma.

Signed-off-by: Kir Kolyshkin <kir@openvz.org>

--- a/man/vzctl.8
+++ b/man/vzctl.8
@@ -329,13 +329,13 @@ Restrict access to iptables modules inside a VE (by default all iptables
 modules that are loaded in the host system are accessible inside a VE).
 
 You can use the following values for \fIname\fR:
-\fIiptable_filter\fR, \fIiptable_mangle\fR, \fIipt_limit\fR,
-\fIipt_multiport\fR, \fIipt_tos\fR, \fIipt_TOS\fR, \fIipt_REJECT\fR,
-\fIipt_TCPMSS\fR, \fIipt_tcpmss\fR, \fIipt_ttl\fR, \fIipt_LOG\fR,
-\fIipt_length\fR, \fIip_conntrack\fR, \fIip_conntrack_ftp\fR,
-\fIip_conntrack_irc\fR, \fIipt_conntrack\fR, \fIipt_state\fR,
-\fIipt_helper\fR, \fIiptable_nat\fR, \fIip_nat_ftp\fR, \fIip_nat_irc\fR,
-\fIipt_REDIRECT\fR, \fIxt_mac\fR \fIipt_owner\fR.
+\fBiptable_filter\fR, \fBiptable_mangle\fR, \fBipt_limit\fR,
+\fBipt_multiport\fR, \fBipt_tos\fR, \fBipt_TOS\fR, \fBipt_REJECT\fR,
+\fBipt_TCPMSS\fR, \fBipt_tcpmss\fR, \fBipt_ttl\fR, \fBipt_LOG\fR,
+\fBipt_length\fR, \fBip_conntrack\fR, \fBip_conntrack_ftp\fR,
+\fBip_conntrack_irc\fR, \fBipt_conntrack\fR, \fBipt_state\fR,
+\fBipt_helper\fR, \fBiptable_nat\fR, \fBip_nat_ftp\fR, \fBip_nat_irc\fR,
+\fBipt_REDIRECT\fR, \fBxt_mac\fR, \fBipt_owner\fR.
 .TP
 \fBNetwork devices control parameters\fR
 .IP "\fB--netdev_add\fR \fIname\fR"
